--- a/youtube videos/1. dl in career_break.md
+++ b/youtube videos/1. dl in career_break.md
@@ -3,53 +3,33 @@
 
 My Process of mastering Deep Learning in 2023
 Career Break for Personal & Professional Development.
-
-
-
+---
 ## Agenda
-1. 2023 - Year of Mastering Deep Learning
-3. Expensive Course != Good Course, Long Course != Good Course
-2. My Learning Goals: "(Graduate Level) Knowledge in AI from (Stanford)"
+#### Goal
+1. Learning Goal: "Mastering Deep Learning in Career Break"
+2. Learning Scope: "(Graduate Level) Knowledge in AI from (Stanford)"
 
-4. How "Mastery" looks and DOESN'T look like
-4. Why "Deep Learning"? & Truth about the Hype
-5. "Learning Resources" vs "Learning Process"
+#### Problems - Extreme Hype & Large Influencers 
+3. "Deep Learning" & Truth it's the Hype
+6. Masters vs Influencers vs Masters
+    - Deep Learning is Harder. Neural Networks coding is Easy
+    - Mastery is Hard
 
+#### Learning Resources
+4. Learning Resources & their distribution
+    - Too many resources
+    - Expensive Course != Good Course, Long Course != Good Course
+7. "Learning Resources Hell" vs "Learning Process"
 
+#### Nature of Deep Learning & Consequences
+1. Code is simple & small (100 lines). 
+3. Consequence. Understanding lags behind coding. Illusion of understanding. 
+4. Breakthroughs are easy to understand, but hard to do. e = mc^2 difficulty. or 3 newton's law. (Physics)
+5. Nascent field. Need original thinkers because there haven't been people who have even thought this. 
+    - Imagine you want to send rocket to moon, but neither newton's law, nor calculus are invented.
+6. Intelligence of Brain 1% known, ANI 1% known. Mature field like physics vs this field.
+2. Understanding Deep Learning is very Hard. 
 ---
 
-## Designing "custom" Learning Plan
-- 2 Phase Learning Plan
-    - Phase 1, more introduction and foundations & concepts. 
-    - Phase 2 can go into more depth & reinforce fundamentals
 
-## So for Phase 1
-1. Courses should be beginner friendly
-2. Easy in beginning with incremental complexity vs Steep learning curve
-3. One thing at a time
-4. Choose courses with different POVs
-    
-   
----
-## Phase 1 of Mastering Deep Learning
-1. TF Specialization
-2. Kaggle Learn
-3. CS230
-4. ZTM Pytorch
-5. Deep Understanding of Deep Learning
-4. ERA1
 
----
-## Is Deep Learning Hard to Learn?
-
-1. NO
-2. Anything is learnable, if structured properly
-
----
-## What is Learning
-Permanent change in brain. (As result of study, experience or learning)
-
-- Neuron  Connection
-- Brain Fold
-
----
