--- a/youtube videos/1. dl in career_break.md
+++ b/youtube videos/1. dl in career_break.md
@@ -1,4 +1,7 @@
-
+---
+title: Mastering Deep Learning in Career Break
+notes: Rewritten Agenda as Sections -> Slides. 4 Section in video & powerpoint. Each point is one slide
+---
 ## Mastering Deep Learning in Career Break
 
 My Process of mastering Deep Learning in 2023
@@ -7,13 +10,14 @@ Career Break for Personal & Professional Development.
 ## Agenda
 #### Goal
 1. Learning Goal: "Mastering Deep Learning in Career Break"
-2. Learning Scope: "(Graduate Level) Knowledge in AI from (Stanford)"
+2. Learning Scope: "(Graduate Level) Knowledge in AI from (Stanford)" + "CS230 Course Projects" + "Fast AI Projects"
 
 #### Problems - Extreme Hype & Large Influencers 
 3. "Deep Learning" & Truth it's the Hype
-6. Masters vs Influencers vs Masters
+4. Masters vs Influencers
     - Deep Learning is Harder. Neural Networks coding is Easy
     - Mastery is Hard
+    - Normal Genius vs Peerless Genius. Masters like Richard Feynman or Leonardo Da Vinci
 
 #### Learning Resources
 4. Learning Resources & their distribution
