--- a/youtube videos/2. challenges in learning dl - draft 2.md
+++ b/youtube videos/2. challenges in learning dl - draft 2.md
@@ -1,25 +1,33 @@
 
-# Final Draft
-## Challenges
+## Agenda
+- Coding != Deep Learning
+- Neural Networks as Programming or Maths
+- Two Popular Approaches of Learning
+- Learning Resources & Learning Plan
+- Jargons & Jargons
+- Overview of Deep Learning
+---
 ### Coding != Deep Learning
 - My overconfidence. I am good enough Programmer
 - Machine Learning Trainer
 - In college I had learnt Deep Learning. 
 - Overconfidence and illusion of expertise. Neglecting science & experimentation aspect. neglecting maths & detailed understanding aspect. 
 - People don't do Science in Data Science. They don't do Maths in Data Science. They just do Coding in Science.
-- 
+
+--- 
+
 ### 1. Neural Network -> How to Look at it
 - Automobile Engineer   vs  Mechanic     vs  Driver
 - Maths                 vs  Coding       vs  Using the Intelligence as Blackbox
 ![test](https://padaseva.in/wp-content/uploads/2019/12/elephant-blind-men.jpg)
 - Partial Picture, not complete End to End Picture
-
+---
 ### 2. Two Popular Approaches: Andrew Ng or Jeremy Howard & My Struggles with them
 - Either too detailed too quickly. Automobile Engineer in Andrew Ng
 - Or top down but code too complex for beginning, not abstracted. Mechanic in Jeremy Howard
 - No Middle Way. [NN from scratch by sentdex] a better start. [NN - 3Blue1Brown]
 - Had to build a Hybrid Model
-
+---
 ### 3. A mix of different courses + blogs + etc
 - Choosing the right kind of courses was difficult. 
 - Another difficult. No Standardization. variable names, function names or in pytorch the names are simple. but code isn't written in standard way
@@ -27,10 +35,10 @@
 - `y_preds` vs `y_predicted_logits` vs `y_predicted_pre_activation`
 - Python language -> one way to do one thing vs Perl language -> many ways to do one thing. With pytorch, we get lost between different ways of writing the model
 - Before focusing on essential concepts
-
+---
 ### 4. Jargons, Jargons & Jargons
 Gradient Descent, Stochastic Gradient Descent, Relu. MNIST, CIFAR, Imagenet, alexnet, vgg19, resnet
-
+---
 
 ### 5. Resources - Need for Landscape
 - A detailed landscape. Landscape not as simple venn diagram. 
@@ -40,9 +48,6 @@ Gradient Descent, Stochastic Gradient Descent, Relu. MNIST, CIFAR, Imagenet, ale
   - Low Level: Pytorch
   - High Level: Fast ai / Keras / Huggingface may be? . Write your own code snippets for things.
   - Custom Functionality: External Libraries ready made, or when you might need to write it yourself, in pytorch
-  - 
-
-
 
 ----
 
