commiting old changes

--- a/youtube videos/3. dl landscape.md
+++ b/youtube videos/3. dl landscape.md
@@ -1,8 +1,8 @@
 ## Deep Learning
 
-1. Deep Neural Network
-   1. Vision
-   2. Natural Language
+# Deep Neural Network
+## Vision
+## Natural Language
 ----
 Why Landscape
 1. Next level doesn't come before level before. Everything builds on top of previous
@@ -12,7 +12,7 @@ Why Landscape
 
 ---
 ## Vision
-- 101
+### 101
   - Topics
     - Using NN to learn to identify things: Data, Model Architecture $\Large f(,W)$, Training, Error Curves, Learning Rate, Gradient & Parameters. Narrow Intelligence
     - Parametric Experiments & Experiment Manager. Iterative Model Development.
@@ -24,7 +24,7 @@ Why Landscape
     - Image Classification: [Digits Classification -> 10 Objects Classification -> Real World 1000 Objects Classification]
   - Libraries
     - Pytorch, huggingface datasets, NN Monitoring WandB, torchmetrics, Gradio, timm
-- 201
+### 201
   - Topics
     - Model Compression, Pruning
     - Transfer Learning
@@ -36,12 +36,12 @@ Why Landscape
   - Problem
     - Image Classification with Maths -> Segmentation -> SuperResolution -> Generative AI -> Image to Text
     - Unsolvable Problems
-- 301
+### 301
   - 
 
 ---
 ## Natural Language
-- 101
+### 101
   - Topics
     - Using Neural Networks to learn meaning of Word. Data, Model Architecture, Training, Error Curve, Learning Rate, Gradient & Parameters. Narrow Intelligence
     - Neural Networks to do sentence classification. CNN as feature extractor
@@ -49,7 +49,7 @@ Why Landscape
     - Parametric Experiments & Experiment Manager
   - Problem
     - Sentence Classification & Semantic Meaning of Word
-- 201
+### 201
   - Topics
     - CNN, 
     - Large Language Models & Transformers & Attention
@@ -59,7 +59,7 @@ Why Landscape
   - Problem
     - All Problems
     - Unsolvable Problems
-- 301
+### 301
   - Topics
     - Multi LLMs
     - LLM Agents, Reinforcement Learning
