--- a/slides/week 1 - slides.ipynb
+++ b/slides/week 1 - slides.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "2ec837a1-2471-44ed-800a-19f20e675d45",
    "metadata": {
     "slideshow": {
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Single Example as Tensor = <PIL.PngImagePlugin.PngImageFile image mode=L size=28x28 at 0x7FC111D1DA90>, Value = 2\n"
+      "Single Example as Tensor = <PIL.PngImagePlugin.PngImageFile image mode=L size=28x28 at 0x7FE55D04F430>, Value = 6\n"
      ]
     }
    ],
@@ -119,10 +119,10 @@
     "import ipyplot\n",
     "\n",
     "digits_dataset = hg_datasets.load_dataset(\"mnist\", split=\"train\")\n",
+    "\n",
+    "\n",
     "split_datasets = digits_dataset.train_test_split(train_size=0.9 , test_size=0.1)\n",
-    "\n",
     "digits_datasets_training, digits_datasets_validation = split_datasets['train'], split_datasets['test']\n",
-    "\n",
     "print(f\"Single Example as Tensor = {digits_datasets_training['image'][0]}, Value = {digits_datasets_training['label'][0]}\")"
    ]
   },
@@ -606,32 +606,15 @@
     "model_parameters = model.parameters()\n",
     "\n",
     "error_func = nn.functional.cross_entropy\n",
-    "optimizer  = torch.optim.Adam(model_parameters, lr= 0.01)"
+    "optimizer  = torch.optim.Adam(params=model_parameters, lr= 0.01)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "183d55c2-9b3b-42ed-bd56-0ead9e7b49be",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-17 13:36:52.174966: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## IMP: Understand the Deep Learning Concept. Not Pytorch's Syntax\n",
-    "\n",
+    "IMP: Understand the Deep Learning Concept. Not Pytorch's Syntax\n",
+    "```python\n",
     "import keras_core as keras\n",
     "import os\n",
     "os.environ[\"KERAS_BACKEND\"] = \"torch\"\n",
@@ -644,7 +627,8 @@
     "])\n",
     "k_model.summary()\n",
     "\n",
-    "k_model.compile(loss = \"cross_entropy\", optimizer = \"adam\")"
+    "k_model.compile(loss = \"cross_entropy\", optimizer = \"adam\")\n",
+    "```"
    ]
   },
   {
@@ -664,6 +648,8 @@
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "\n",
+    "        \n",
     "    "
    ]
   },
