--- a/final_slides/Lecture 1 - Building NN.ipynb
+++ b/final_slides/Lecture 1 - Building NN.ipynb
@@ -631,7 +631,7 @@
     "model_parameters = list(model.parameters())\n",
     "\n",
     "# 3. Registering Model Parameters with Optimizer, as variables to be minimized\n",
-    "gradient_step    = 0.01\n",
+    "gradient_step    = 10\n",
     "LEARNING_RATE    = gradient_step\n",
     "OPTIMIZER        = torch.optim.SGD( params= model_parameters, lr= gradient_step )\n",
     "\n",
@@ -691,13 +691,15 @@
     "loss = error_func( y_predicted_logits, y_actual )\n",
     "de_dw = torch.autograd.grad(outputs= loss, inputs = model.parameters() )\n",
     "loss.backward()\n",
-    "```\n",
-    "$\\Huge \\frac{\\partial E}{\\partial W}$\n",
-    "```python\n",
+    "\n",
+    "parameters_list = list(model.parameters())\n",
+    "gradients_list = list(de_dw)\n",
+    "\n",
     "optimizer.step()\n",
     "for parameter in model.parameters():\n",
     "    parameter = parameter - step_length * parameter.gradient\n",
-    "```"
+    "```\n",
+    "$\\Huge \\frac{\\partial E}{\\partial W}$\n"
    ]
   },
   {
@@ -837,6 +839,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! KEY CODE\n",
+    "\n",
     "import torchmetrics\n",
     "import wandb\n",
     "wandb.init()\n",
