adding cookbook & week 1 codes

--- a/final_slides/Week 1 - Building NN.ipynb
+++ b/final_slides/Week 1 - Building NN.ipynb
@@ -876,30 +876,24 @@
     "                \"batch_no\": batch_no\n",
     "            }\n",
     "            wandb.log(metrics_per_batch)\n",
-    "            print(\"END OF BATCH\")\n",
-    "            \"\"\"\n",
+    "            \"END OF BATCH\"\n",
     "            # Alternative Training Loop\n",
     "            \n",
-    "            OPTIMIZER.zero_grad()\n",
-    "            # loss.backward()\n",
     "            # loss.backward(), computes dloss/dw for every parameter w which has requires_grad=True.\n",
-    "            # w.grad += dloss/dw. By default, gradients are accumulated in buffers (i.e, not overwritten) whenever .backward() is called.\n",
-    "            dError_dWeights = torch.autograd.grad(outputs= loss, inputs = model_parameters)\n",
-    "\n",
-    "            # SINGLE STEP UPDATES ALL PARAMETERS by one STEP\n",
-    "            OPTIMIZER.step()\n",
-    "            for (name, weight), gradient in zip(model.named_parameters(), dError_dWeights):\n",
-    "                print(name)\n",
-    "                weight = weight - gradient * LEARNING_RATE\n",
-    "            \"\"\"\n",
-    "            print(\"END OF BATCH\")\n",
+    "            # w.grad += dloss/dw. \n",
+    "            # By default, gradients are accumulated in buffers (i.e, not overwritten) whenever .backward() is called.\n",
+    "            \n",
+    "            # dError_dWeights = torch.autograd.grad(outputs= loss, inputs = model_parameters)\n",
+    "            # for (name, weight), gradient in zip(model.named_parameters(), dError_dWeights):\n",
+    "            #    print(name)\n",
+    "            #    weight = weight - gradient * LEARNING_RATE\n",
     "        \n",
     "        accuracy_average    = accuracy_total / TOTAL_BATCHES\n",
     "        metrics_per_epoch   = {\n",
     "            \"training_accuracy_average_per_epoch\": accuracy_average\n",
     "        }\n",
     "        wandb.log(metrics_per_epoch)\n",
-    "        print(f\"END OF ENTIRE EPOCH no {epoch_no}\")\n",
+    "        \"END OF ENTIRE EPOCH no\"\n",
     "        evaluate_model(validation_dataset, model, error_func, epoch_no)\n",
     "\n",
     "def evaluate_model(dataset, model, error_func, epoch_no):\n",
