--- a/final_slides/Week 3 - Imagenet.ipynb
+++ b/final_slides/Week 3 - Imagenet.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Huggingface Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -148,6 +155,13 @@
    ],
    "source": [
     "example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Architecture"
    ]
   },
   {
