--- a/final_slides/Week 3 - Imagenet.ipynb
+++ b/final_slides/Week 3 - Imagenet.ipynb
@@ -256,6 +256,41 @@
     "single_random_batch = torch.randn(1,3,64,64)\n",
     "model(single_random_batch)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch, torch.nn as nn\n",
+    "\n",
+    "# TODO: MODEL \n",
+    "feature_extractor = nn.Sequential(\n",
+    "    nn.Conv2d( out_channels = 50, in_channels = 1, kernel_size = (3,3)),\n",
+    "    nn.ReLU(),\n",
+    "  \n",
+    "    nn.Conv2d(out_channels = 100, in_channels = 50, kernel_size = (3,3)),\n",
+    "    nn.ReLU(),\n",
+    "\n",
+    "    nn.Conv2d(out_channels = 200, in_channels = 100, kernel_size = (3,3)),\n",
+    "    nn.ReLU(),\n",
+    "\n",
+    "    nn.Conv2d(out_channels = 300, in_channels = 200, kernel_size = (3,3)),\n",
+    "    nn.ReLU(),\n",
+    "\n",
+    ")\n",
+    "\n",
+    "decision_maker = nn.Sequential(\n",
+    "  nn.Linear(out_features = 50, in_features = 100*7*7 ),\n",
+    "  nn.Linear(out_features = 10, in_features = 50)\n",
+    ")\n",
+    "\n",
+    "model = nn.Sequential(\n",
+    "  feature_extractor,\n",
+    "  decision_maker\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
