--- a/final_slides/class_notebook.ipynb
+++ b/final_slides/class_notebook.ipynb
@@ -12,12 +12,12 @@
     "neuron = torch.nn.Linear(in_features = 7, out_features = 8)\n",
     "\n",
     "class Network(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self,):\n",
     "        super().__init__()\n",
     "        in_features = 7\n",
     "        out_features = 8\n",
     "        self.weight_parameters = torch.randn(size = (out_features, in_features), requires_grad= True) # all neurons together\n",
-    "        self.bias_parameter = torch.randn(size = (out_features,), requires_grad= True)\n",
+    "        self.bias_parameter    = torch.randn(size = (out_features,)            , requires_grad= True)\n",
     "    \n",
     "    def forward(self, x_batch):\n",
     "        z = torch.matmul(x_batch, self.weight_parameters)\n",
